--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
-    <!--<script type="module" src="/src/script.ts"></script> Ta fram när skapa spellistor på Spotify-->
+    <!--<script type="module" src="/src/data-creation/createPlaylists.ts"></script> Add for creating Spotify playlists-->
   </body>
 </html>
