Uppdatera index.html och addera favicon

--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="keywords" content="Musikhjälpen, statistik, statistics, Musikhjälpen data, Musikhjälpen 2023, Musikhjälpen historia, Musikhjälpen topplåtar, Musikhjälpen playlists, Musikhjälpen spellista">
+    <meta name="description" content="Explore detailed statistics and insights about Musikhjälpen, including the most played songs, most wished artists, and historical data across different years.">
+    <meta name="author" content="Olivia Jarl">  
     <title>MHStats</title>
+    <link rel="icon" href="/favicon.ico" />
   </head>
   <body>
     <div id="root"></div>
